--- a/static/main.css
+++ b/static/main.css
@@ -7,7 +7,7 @@ html,body {
     margin:0 auto;
     height:100%;
     width:100%;
-    background-color: brown;
+    background-color: red;
     color:greenyellow;
     overflow:hidden;
     text-align: center;
@@ -16,6 +16,29 @@ html,body {
 .container h1 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
-    color: honeydew;
+    color: burlywood;
 }
 
+.container form {
+    margin: 20px;
+}
+
+.container input {
+    width: 350px;
+    height: 15px;
+    font-size: 15px;
+    margin: 2px;
+    padding: 20px;
+    transition: 0.2s ease-in-out;
+}
+
+.container button {
+    width: 70px;
+    height: 30px;
+    background-color: steelblue;
+    margin: 3px;
+}
+
+.container p {
+    margin: 100px;
+}
