--- a/templates/success.html
+++ b/templates/success.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="container">
-            <p>Thank you for your submission<br>
+            <p>Thank you for your submission.<br>
             You will receive an email with the survey results shortly.</p>
         </div>
     </body>
