--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
         <div class="container">
         <h1>Collecting Heights</h1>
         <h3>Please fill entries to get population statistics in height</h3>
-        <form action="succes.html" method="POST">
+        <form action="{{url_for('success')}}" method="POST">
             <input title="Your email will remain safe with us" placeholder="Enter you email"
              type="email" name="email_name" required><br>
              <input title="Your data will remain safe with us" placeholder="Enter your height in cm"
