--- a/static/main.css
+++ b/static/main.css
@@ -7,7 +7,7 @@ html,body {
     margin:0 auto;
     height:100%;
     width:100%;
-    background-color: red;
+    background-color: lightcoral;
     color:greenyellow;
     overflow:hidden;
     text-align: center;
