--- a/static/main.css
+++ b/static/main.css
@@ -42,3 +42,9 @@ html,body {
 .container p {
     margin: 200px;
 }
+
+.message {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    color: red;
+}
