--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,9 @@
         <div class="container">
         <h1>Collecting Heights</h1>
         <h3>Please fill entries to get population statistics in height</h3>
+        <div class="message">
+            {{text | safe}}
+        </div>
         <form action="{{url_for('success')}}" method="POST">
             <input title="Your email will remain safe with us" placeholder="Enter you email"
              type="email" name="email_name" required><br>
