--- a/static/main.css
+++ b/static/main.css
@@ -44,7 +44,7 @@ html,body {
 }
 
 .message {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, sans-serif;
     font-size: 15px;
     color: red;
 }
