--- a/templates/success.html
+++ b/templates/success.html
@@ -9,7 +9,7 @@
 
     <body>
         <div class="container">
-            <p>Thank you for your submission.<br>
+            <p>Thank you for the submission.<br>
             You will receive an email with the survey results shortly.</p>
         </div>
     </body>
